prost-canonical-serde/tests/ui/untagged_enum.stderr
error: unsupported serde container attribute `untagged`
 --> tests/ui/untagged_enum.rs:6:9
  |
6 | #[serde(untagged)]
  |         ^^^^^^^^
